--- a/functions/.prettierrc
+++ b/functions/.prettierrc
@@ -1,13 +1,13 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
-  "singleQuote": false,
-  "printWidth": 100,
+  "printWidth": 120,
   "tabWidth": 2,
-  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "all",
   "bracketSpacing": true,
+  "semi": true,
+  "useTabs": false,
   "bracketSameLine": false,
+  "jsxSingleQuote": false,
   "arrowParens": "always",
-  "endOfLine": "lf",
-  "quoteProps": "as-needed"
+  "endOfLine": "lf"
 }
