--- a/firebase-auth/.env.example
+++ b/firebase-auth/.env.example
@@ -10,3 +10,6 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 VITE_FIREBASE_VAPID_KEY=your_vapid_key
+
+# Gemini Configuration -> https://aistudio.google.com/app/apikey
+VITE_GEMINI_API_KEY=your_gemini_api_key
